--- a/style.css
+++ b/style.css
@@ -195,7 +195,7 @@ main {
 }
 .desription {
   font-size: 1.2rem;
-  letter-spacing: 0.05e;
+  letter-spacing: 0.05em;
   max-width: 35rem;
   color: gray;
 }
