--- a/style.css
+++ b/style.css
@@ -54,6 +54,8 @@ button {
 }
 
 .image-gradient {
+  margin: 0;
+  padding: 0;
   position: absolute;
   top: 0;
   left: 0;
@@ -99,8 +101,23 @@ nav {
   align-items: center;
   gap: 3rem;
   margin-left: -5%;
+  border: 1px solid gray;
+  border-radius: 3rem;
+  padding: 0.8rem 2rem;
+  background-color: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(10px);
+  z-index: 1000;
+  transition: background 0.3s ease;
 }
 
+nav.scrolled {
+  background: rgba(0, 0, 0, 0.8);
+}
+.nav-list {
+  display: flex;
+  gap: 3rem;
+  list-style: none;
+}
 nav a {
   font-size: 1rem;
   letter-spacing: 0.1rem;
@@ -141,7 +158,7 @@ main {
 
 .container {
   max-width: 40rem;
-  margin-left: 5%;
+  margin-left: 10%;
   z-index: 999;
 }
 .container h1 {
@@ -193,29 +210,18 @@ main {
 .tag-box .tag:hover {
   color: #5300a0;
 }
-.desription {
+.description {
   font-size: 1.2rem;
   letter-spacing: 0.05em;
-  max-width: 35rem;
+  max-width: 20rem;
   color: gray;
+  margin-top: 0.4rem;
+  border-top: 1.5px solid #606060;
 }
 .buttons {
   display: flex;
   gap: 1rem;
   margin-top: 2rem;
-}
-.btn-get-started {
-  text-decoration: none;
-  border: 1px solid #2a2a2a;
-  padding: 0.7rem 1.2rem;
-  border-radius: 50px;
-  font-size: 1.2rem;
-  font-weight: 600;
-  letter-spacing: 0.1em;
-  transition: background-color 0.2s ease;
-}
-.btn-get-started:hover {
-  background-color: #1a1a1a;
 }
 
 .btn-signing-main {
@@ -242,8 +248,14 @@ main {
 @media (max-width: 1300px) {
   * {
     cursor: default !important;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
   }
 
+  body {
+    overflow-x: hidden;
+  }
   .cursor {
     display: none !important;
   }
@@ -265,30 +277,40 @@ main {
 @media (max-width: 768px) {
   * {
     cursor: default !important;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
   }
 
+  body {
+    overflow-x: hidden;
+  }
   .cursor {
     display: none !important;
-  }
-  .footer {
-    margin: 10%;
   }
   header {
     padding: 1rem 0.1rem;
     margin-bottom: 5%;
     display: block;
   }
+  .logo {
+    font-size: 2rem;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+  }
+
+  .nav-list {
+    flex-direction: column;
+    gap: 1rem;
+  }
 
   nav {
     display: none;
   }
 
-  header h1 {
-    font-size: 2rem;
-  }
-
   .btn-signing {
-    padding: 0.6rem 1.5rem;
+    display: none;
   }
 
   .container {
@@ -296,7 +318,7 @@ main {
   }
 
   .robot-3d {
-    scale: 0.5;
+    scale: 0.6;
     top: -25%;
     right: 0;
   }
@@ -312,7 +334,7 @@ main {
   .container h1 {
     font-size: 2.5rem;
   }
-  .desription {
+  .description {
     font-size: 1rem;
   }
 
@@ -324,5 +346,11 @@ main {
   .btn-signing-main {
     font-size: 0.8rem;
     padding: 0.8rem 2rem;
+  }
+  .footer {
+    text-align: center;
+    padding: 2rem 0;
+    margin-top: 4rem;
+    border-top: 1px solid #333;
   }
 }
